Fix button group rendering on small screens
Switch to a higher max width for screens to show buttons listed
underneath one another. This width changed when I increased the font
size in commit 90eff50c1465175de105e9254bb8f63a34349f13.

--- a/_sass/components/_button.sass
+++ b/_sass/components/_button.sass
@@ -25,7 +25,7 @@
   &:last-child
     margin-bottom: 0
 
-@media (max-width: 700px)
+@media (max-width: 780px)
   .button-group
     margin: 20px 0
     text-align: center
